--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="ramka ramka-czerwona">
+      <p class="text-czerwony">
+        Ten tekst z dobrą klasą będzie kolorowy
+      </p>
+    </div>
   </body>
 </html>
