--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="ramka ramka-czerwona">
+      <p class="text-czerwony">
+        Ten tekst z dobrą klasą będzie kolorowy
+      </p>
+      <button id="guzik">Pokaż</button>
+      <p id="hidden" hidden="true">
+        ukryte
+      </p>
+    </div>
+    <script src="logger.js"></script>
   </body>
 </html>
