--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
+    <script src="logger.js" defer></script>
   </head>
   <body>
     <div class="ramka ramka-czerwona">
@@ -16,6 +17,5 @@
         ukryte
       </p>
     </div>
-    <script src="logger.js"></script>
   </body>
 </html>
