--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <address>Adres</address>
+    <article>Artytkuł</article>
+    <footer>Stopka</footer>
+    <h1>Nagłówek H1</h1>
+    <h2>Nagłówek H2</h2>
+    <main>Tresc główna</main>
+    <nav>Nawigacja</nav>
+    <section>Sekcja</section>
   </body>
 </html>
