--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="">
+      Ten tekst jest <b>Pogrubiony</b>
+    </div>
+    <div class="">
+      Ten tekst jest <i>Kursywą</i>
+    </div>
+    <div class="">
+      Ten tekst jest <a href="http://google.pl">Linkiem</a>
+    </div>
+    <div class="">
+      Ten tekst jest <br>Złamany
+    </div>
+    <div class="">
+      Ten tekst jest <code>Kodem</code>
+    </div>
+    <div class="">
+      Ten tekst jest <q>Cytatem</q>
+    </div>
   </body>
 </html>
