--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <dl title="Definicje">
+      <dt>Nagłówkek1</dt>
+      <dd>Definicja1</dd>
+      <dt>Nagłówkek2</dt>
+      <dd>Definicja2</dd>
+    </dl>
+    <ol>
+      <li>Lista1</li>
+      <li>Lista2</li>
+    </ol>
+    <ul>
+      <li>Lista1</li>
+      <li>Lista2</li>
+    </ul>
   </body>
 </html>
