--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <table>
+      <caption>Moja tabelka</caption>
+      <thead>
+        <tr>
+          <th scope="col">Imie</th>
+          <th scope="col">Wiek</th>
+          <th scope="col">Rozmiar Buta</th>
+        </tr>
+      </thead>
+      <tr>
+        <th scope="row">Janusz</th>
+        <td>56</td>
+        <td>44</td>
+      </tr>
+      <tr>
+        <th scope="row">Grażyna</th>
+        <td>48</td>
+        <td>39</td>
+      </tr>
+    </table>
   </body>
 </html>
