--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+      <form method="post">
+        <div>
+          <label for="name">Imię:</label>
+          <input type="text" id="name" name="name">
+        </div>
+        <div>
+          <label for="mail">E-mail:</label>
+          <input type="email" id="mail" name="mail">
+        </div>
+        <div>
+          <label for="msg">Wiadomość:</label>
+          <textarea id="msg" name="message"></textarea>
+        </div>
+        <div class="button">
+            <button type="submit">Wyślij</button>
+        </div>
+        <div class="button">
+            <button type="reset">Kasuj</button>
+        </div>
+      </form>
   </body>
 </html>
