--- a/index.html
+++ b/index.html
@@ -28,5 +28,16 @@
             <button type="reset">Kasuj</button>
         </div>
       </form>
+
+      <form>
+          <label for="skille">Wybierz ulubiony język:</label>
+          <input list="jezyki-lista" id="skille" name="skille_name" />
+          
+          <datalist id="jezyki-lista">
+              <option value="Java">
+              <option value="C#">
+              <option value="JavaScript">
+          </datalist>
+      </form>
   </body>
 </html>
