--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
   </head>
   <body>
-    Super duper
+    <div class="example-div" id="mainDiv" style="background-color: brown" title="Duży brązowy kwadrat">
+      <p class="centertext">Tu jest tekst</p>
+      <button id="guzik">Klik</button>
+    </div>
   </body>
 </html>
