--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="short red"></div>
+    <div class="long green"></div>
+    <div class="short red"></div>
+    <div class="long green"></div>
   </body>
 </html>
