--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    <div class="short red"></div>
-    <div class="long green"></div>
-    <div class="short red"></div>
-    <div class="long green"></div>
+
+    <div class="short red" ></div>
+    <div class="long green" ></div>
+    <div class="short red" ></div>
+    <div class="long green" ></div>
+    <hr>
+    <div class="short red" style="display: inline-block; width: 25%; padding: 5px 10px"></div>
+    <div class="long green" style="display: inline-block"></div>
+    <div class="short red" style="display: inline-block"></div>
+    <div class="long green" style="display: inline-block"></div>
+    <hr />
+    
+    <div style="display: block">
+      <p style="display: inline-block">A</p>
+      <p style="display: inline-block">B</p>
+      <p style="display: inline-block">C</p>
+    </div>
+    <hr>
+
+    
+
   </body>
 </html>
