--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="inline-div red sized"></div>
+    <div class="inline-div green sized"></div>
+    <div class="inline-div blue sized"></div>
   </body>
 </html>
