--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="ramka ramka-czerwona">
-      <p class="text-czerwony">
+      <p class="co by tu wstawić......">
         Ten tekst z dobrą klasą będzie kolorowy
       </p>
     </div>
