--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div class="ramka ramka-czerwona">
-      <p class="text-czerwony">
-        Ten tekst z dobrą klasą będzie kolorowy
+      <p id="shown">
+        Ten tekst zniknie
       </p>
       <button id="guzik">Pokaż</button>
       <p id="hidden" hidden="true">
-        ukryte
+        A ten sie pokaze
       </p>
     </div>
   </body>
