--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <div class="example-div" id="mainDiv" style="background-color: brown" title="Duży brązowy kwadrat">
       <p class="centertext">Tu jest tekst</p>
-      <button id="guzik">Klik</button>
+      <p class="centertext">I tu</p>
+      <p class="centertext">I tu</p>
+      <p class="centertext">I tu</p>
+      <button id="guzik" class="button center-button">Klik</button>
     </div>
   </body>
 </html>
