--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="menu">
+      <a href="#hey" class="menu-item" >Do Ho</a>
+      <a href="#ho" class="menu-item" >Do Hey</a>
+      <a href="http://www.google.com" class="menu-item" >Do Google</a>
+    </div>
+    <div class="dlugi blue" id="hey">Hey</div>
+    <div class="dlugi red" id="ho">Ho</div>
   </body>
 </html>
