--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="media-row">
+      <video controls="" autoplay="" loop="">
+        <source src="https://giant.gfycat.com/HeartfeltSerpentineBluebottle.webm">
+      </video>
+    </div>
+    <div class="media-row">
+        <video controls="" autoplay="" loop="">
+            <source src="https://giant.gfycat.com/RipeUnimportantLamb.webm">
+          </video>
+    </div>
+    <div class="media-row">
+        <video controls="" autoplay="" loop="">
+            <source src="https://giant.gfycat.com/CandidKeyHairstreakbutterfly.webm">
+          </video>
+    </div>
   </body>
 </html>
