--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="">
+      <p>To jest paragraf</p>
+      <p>To też</p>
+      <p>I to też</p>
+    </div>
   </body>
 </html>
