--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <p>To jest paragraf</p>
       <p>To też</p>
       <p>I to też</p>
+      <button>A to guzik</button>
     </div>
   </body>
 </html>
