--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="klasa-div" id="divId" style="color:red" title="Tytuł diva">
+      Hej Hej
+      <p style="color:seagreen">Hej hej</p>
+    </div>
   </body>
 </html>
