--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="menu">
-      <a href="#hey" class="menu-item" >Do Ho</a>
-      <a href="#ho" class="menu-item" >Do Hey</a>
+      <a href="#ho" class="menu-item" >Do Ho</a>
+      <a href="#hey" class="menu-item" >Do Hey</a>
       <a href="http://www.google.com" class="menu-item" >Do Google</a>
     </div>
     <div class="dlugi blue" id="hey">Hey</div>
