--- a/index.html
+++ b/index.html
@@ -14,20 +14,32 @@
     <div class="short red" ></div>
     <div class="long green" ></div>
     <hr>
-    <div class="short red" style="display: inline-block; width: 25%; padding: 5px 10px"></div>
+    <div class="short red" style="display: inline-block"></div>
     <div class="long green" style="display: inline-block"></div>
     <div class="short red" style="display: inline-block"></div>
     <div class="long green" style="display: inline-block"></div>
     <hr />
-    
-    <div style="display: block">
-      <p style="display: inline-block">A</p>
-      <p style="display: inline-block">B</p>
-      <p style="display: inline-block">C</p>
+    <div class="short red" style="display: inline-block; width: 20%"></div>
+    <div class="long green" style="display: inline-block; width: 20%"></div>
+    <div class="short red" style="display: inline-block; width: 20%"></div>
+    <div class="long green" style="display: inline-block; width: 20%"></div>
+    <hr />
+    <div class="short red" style="display: block; width: 20%"></div>
+    <div class="long green" style="display: block; width: 20%"></div>
+    <div class="short red" style="display: block; width: 20%"></div>
+    <div class="long green" style="display: block; width: 20%"></div>
+    <hr/>
+    <div style="display: inline-block">
+      <p>A</p>
+      <p>B</p>
+      <p>C</p>
     </div>
-    <hr>
-
-    
+    <hr/>
+    <div style="display: inline-block">
+        <p style="display: inherit">A</p>
+        <p style="display: inherit">B</p>
+        <p style="display: inherit">C</p>
+      </div>
 
   </body>
 </html>
