--- a/index.html
+++ b/index.html
@@ -5,36 +5,60 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
   </head>
   <body>
 
-    <div class="short red" ></div>
-    <div class="long green" ></div>
-    <div class="short red" ></div>
-    <div class="long green" ></div>
+    <div class="">
+      <div class="short red" ></div>
+      <div class="long green" ></div>
+      <div class="short red" ></div>
+      <div class="long green" ></div>
+    </div>
+
     <hr>
-    <div class="short red" style="display: inline-block"></div>
-    <div class="long green" style="display: inline-block"></div>
-    <div class="short red" style="display: inline-block"></div>
-    <div class="long green" style="display: inline-block"></div>
-    <hr />
-    <div class="short red" style="display: inline-block; width: 20%"></div>
-    <div class="long green" style="display: inline-block; width: 20%"></div>
-    <div class="short red" style="display: inline-block; width: 20%"></div>
-    <div class="long green" style="display: inline-block; width: 20%"></div>
-    <hr />
-    <div class="short red" style="display: block; width: 20%"></div>
-    <div class="long green" style="display: block; width: 20%"></div>
-    <div class="short red" style="display: block; width: 20%"></div>
-    <div class="long green" style="display: block; width: 20%"></div>
-    <hr/>
+    <button id="1">Ukryj</button>
+    <hr>
+
+    <div id="div1" class="">
+      <div class="short red" style="display: inline-block"></div>
+      <div class="long green" style="display: inline-block"></div>
+      <div class="short red" style="display: inline-block"></div>
+      <div class="long green" style="display: inline-block"></div>
+    </div>
+
+    <hr>
+    <button id="2">Ukryj</button>
+    <hr>
+
+    <div id="div2" class="">
+      <div class="short red" style="display: inline-block; width: 20%"></div>
+      <div class="long green" style="display: inline-block; width: 20%"></div>
+      <div class="short red" style="display: inline-block; width: 20%"></div>
+      <div class="long green" style="display: inline-block; width: 20%"></div>
+    </div>
+    
+    <hr>
+    <button id="3">Ukryj</button>
+    <hr>
+
+    <div id="div3" class="">
+      <div class="short red" style="display: block; width: 20%"></div>
+      <div class="long green" style="display: block; width: 20%"></div>
+      <div class="short red" style="display: block; width: 20%"></div>
+      <div class="long green" style="display: block; width: 20%"></div>
+    </div>
+
+    <hr>
+
     <div style="display: inline-block">
       <p>A</p>
       <p>B</p>
       <p>C</p>
     </div>
-    <hr/>
+
+    <hr>
+
     <div style="display: inline-block">
         <p style="display: inherit">A</p>
         <p style="display: inherit">B</p>
