--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="bg">
+      <div class="sized static"> STATIC </div>
+      <div class="sized relative"> RELATIVE </div>
+      <div class="sized absolute"> ABSOLUTE </div>
+      <div class="sized fixed"> STATIC </div>
+    </div>
   </body>
 </html>
