--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
   </head>
   <body>
     <div class="bg">
-      <div class="sized static"> STATIC </div>
-      <div class="sized relative"> RELATIVE </div>
-      <div class="sized absolute"> ABSOLUTE </div>
-      <div class="sized fixed"> STATIC </div>
+      <div class="sized static"> 
+        STATIC 
+        <div class="inner">Inner</div>
+      </div>
+      <div class="sized relative"> 
+        RELATIVE 
+        <div class="inner">Inner</div>
+      </div>
+      <div class="sized absolute"> 
+        ABSOLUTE 
+        <div class="inner">Inner</div>
+      </div>
+      <div class="sized fixed"> 
+        STATIC
+        <div class="inner">Inner</div> 
+      </div>
     </div>
   </body>
 </html>
