--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
   </head>
   <body>
-    Super duper
+    <input id="txt" type="text">
+    <button id="btn">Dodaj Diva</button>
+    <div id="parent" class="parent">
+      <div class="sized r">Oh</div>
+      <div class="sized g">My</div>
+      <div class="sized b">God</div>
+    </div>
   </body>
 </html>
