--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
     <input id="txt" type="text">
     <button id="btn">Dodaj Diva</button>
     <div id="parent" class="parent">
-      <div class="sized r">Oh</div>
-      <div class="sized g">My</div>
-      <div class="sized b">God</div>
+      <div class="sized r">
+        <p>
+          Oh
+        </p>
+      </div>
+      <div class="sized g">
+        <p>
+          My
+        </p>
+      </div>
+      <div class="sized b">
+        <p>
+          God
+        </p>
+      </div>
     </div>
   </body>
 </html>
