--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+      <div class="wrapper">
+          <ui class="mainMenu">
+              <li class="item" id="account">
+                  <a href="#account" class="btn"><i class="fas fa-user-circle"></i>Konto</a>
+                  <div class="subMenu">
+                      <a href="">O mnie</a>
+                      <a href="">O Świecie</a>
+                      <a href="">O moich ulubionych narkotykach</a>
+                  </div>
+              </li>
+              <li class="item" id="about">
+                  <a href="#about" class="btn"><i class="fas fa-address-card"></i>O nas</a>
+                  <div class="subMenu">
+                      <a href="">A</a>
+                      <a href="">B</a>
+                  </div>
+              </li>
+              <li class="item">
+                  <a href="#" class="btn"><i class="fas fa-sign-out-alt"></i>Wyloguj</a>
+              </li>
+          </ui>
+      </div>
   </body>
 </html>
