--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="">
+      <div class="sized element"></div>
+      <div class="sized element-rev"></div>
+      <div class="sized element"></div>
+      <div class="sized element-rev"></div>
+    </div>
+    <div class="">
+      <div class="sized to-circle g"></div>
+      <div class="sized to-square g"></div>
+    </div>
+    <div class="fixed">
+        <div class="sized shrink-ease g" style="position: absolute"></div>
+        <div class="sized shrink-linear g" style="position: absolute; left: 150px"></div>
+        <div class="sized shrink-steps g" style="position: absolute; left: 300px"></div>
+        <div class="sized shrink-bezier g" style="position: absolute; left: 450px"></div> 
+
+        
+      </div>
   </body>
 </html>
