--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="inner" id="innerDiv">
+      <div class="inner" id="innerDiv" draggable="true">
         <p>Tekst</p>
       </div>
     </div>
@@ -17,8 +17,8 @@
     <div>
       <div class="control-box">
         <div class="control-box-dim">
-          <input type="range" min="0" max="25" value="0" class="slider" id="marginLR">
-          <input type="range" min="0" max="25" value="0" class="slider" id="marginUD">
+          <input type="range" min="0" max="100" value="0" class="slider" id="marginLR">
+          <input type="range" min="0" max="100" value="0" class="slider" id="marginUD">
         </div>
       </div>
       <div class="control-box">
