--- a/index.html
+++ b/index.html
@@ -39,5 +39,26 @@
               <option value="JavaScript">
           </datalist>
       </form>
+
+      <form>
+        <p>Jakie lubisz ziemniaczki?</p>
+        <div>
+          <input type="radio" id="gotowaneId"
+           name="ziemniaki" value="gotowane">
+          <label for="gotowaneId">Gotowane</label>
+      
+          <input type="radio" id="smazoneId"
+           name="ziemniaki" value="smazone">
+          <label for="contactChoice2">Smażone</label>
+      
+          <input type="radio" id="mundurkiId"
+           name="ziemniaki" value="gotowane">
+          <label for="contactChoice3">W mundurkach</label>
+        </div>
+        <div>
+          <button type="submit">Wyślij</button>
+        </div>
+      </form>
+
   </body>
 </html>
