--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="inner" id="innerDiv" draggable="true">
+      <div class="inner absolute r" id="innerDiv" draggable="true">
         <p>Tekst</p>
       </div>
+      <!-- <div class="r inner" draggable="true">
+        <p>Tekst</p>
+      </div> -->
     </div>
 
     <div>
