--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="sized full"></div>
+    <div class="sized combined"></div>
+    <div class="sized top-sides-bottom"></div>
+    <div class="sized hor-ver"></div>
+    <div class="sized all"></div>
   </body>
 </html>
