--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <script src="logger.js"></script>
   </head>
   <body>
-    Super duper
+    <div class="content-wrap">
+      <div class="sized r">Text</div>
+      <div class="sized g">Text</div>
+      <div class="sized r">Text</div>
+      <div class="sized g">Text</div>
+    </div>
+    <div class="content-wrap">
+      <div class="sized r">Text</div>
+      <div class="sized g">Text</div>
+      <div class="sized r">Text</div>
+      <div class="sized g">Text</div>
+    </div>
+    <div class="content-wrap">
+      <div class="sized r">Text</div>
+      <div class="sized g">Text</div>
+      <div class="sized r">Text</div>
+      <div class="sized g">Text</div>
+    </div>
+
+    <button>Kliknij</button>
+
+    <div class="content-wrap txt">
+      <p>Paragraf</p>
+      <p>Paragraf</p>
+      <p>Paragraf</p>
+      <p>Paragraf</p>
+      <p>Paragraf</p>
+      <p>Paragraf</p>
+      <p>Paragraf</p>
+      <p>Paragraf</p>
+      <p>Paragraf</p>
+      <p>Paragraf</p>
+    </div>
   </body>
 </html>
