--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
   </head>
   <body>
-    <div class="ramka ramka-czerwona">
-      <p class="co by tu wstawić......">
-        Ten tekst z dobrą klasą będzie kolorowy
+    <div class="ramka ramka-czerwona" style="width: 75%; height: 3empx;">
+      <p id="pId" class="co by tu wstawić......">
+        Wyśrodkuj mnie i pokoloruj :(
       </p>
     </div>
   </body>
