--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p id="shown">
         Ten tekst zniknie
       </p>
-      <button id="guzik">Pokaż</button>
+      <button id="guzik" style="border-radius: 1.5em">Pokaż</button>
       <p id="hidden" hidden="true">
         A ten sie pokaze
       </p>
