--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
   </head>
   <body>
-    Super duper
+    <p id="time"></p>
+    <div class="container" id="contener">
+      <p id="displayArea"></p>
+    </div>
   </body>
 </html>
