--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="logger.js"></script>
   </head>
   <body>
-      <form action="">
+      <form action="" novalidate>
         <div>
           <label for="name">Imię:</label>
           <input type="text" id="name" name="name">
