--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         ABSOLUTE 
         <div class="inner">Inner</div>
       </div>
+      <div class="sized static"> 
+        ABSOLUTE 
+        <div class="inner">Static-2</div>
+      </div>
+      <div class="sized sticky"> 
+        Sticky 
+        <div class="inner">Inner</div>
+      </div>
       <div class="sized fixed"> 
         STATIC
         <div class="inner">Inner</div> 
