--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
   </head>
   <body>
-    Super duper
+      <div class="container">
+          <div class="draggable">Przeciągnij
+            <span>Text</span>
+          </div>
+        </div>
   </body>
 </html>
