--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
   </head>
   <body>
-    Super duper
+    <p>Poniższa treść dociągnie się dynamicznie:</p>
+    <div class="" id="dynamiczny"></div>
   </body>
 </html>
