moj super komentarz

--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
   <body>
     <address>Adres</address>
     <article>Artytkuł</article>
-    <footer>Stopka</footer>
-    <h1>Nagłówek H1</h1>
-    <h2>Nagłówek H2</h2>
+    <footer>Dupa</footer>
+    <h1>Nagłowek H1</h1>
+    <h2>Nagłowek H2</h2>
+    <h3>Nagłowek H2</h3>
+    <h4>Nagłowek H2</h4>
     <main>Tresc główna</main>
     <nav>Nawigacja</nav>
     <section>Sekcja</section>
+
+    <div class="">
+      <p>Hej</p>
+    </div>
+
+
   </body>
 </html>
