--- a/index.html
+++ b/index.html
@@ -3,11 +3,68 @@
   <head>
     <meta charset="utf-8">
     <title>title</title>
-	<link rel="icon" href="favico.ico">
+	  <link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
   </head>
   <body>
-    Super duper
+
+    <div class="wrapper header">
+      <div class="img">
+        <img src="assets/img/doggo1.jpg" alt="Foto Psa" class="left small" height="120" width="120">
+      </div>
+
+      <div class="txt header-txt">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit quae ipsam excepturi adipisci aperiam delectus fuga repudiandae consequuntur laboriosam? Quo voluptatibus pariatur obcaecati. Est fuga facere quo minima, blanditiis quibusdam?
+          Nostrum nemo culpa, voluptatum impedit ea neque, est natus ullam, officia quasi sunt perferendis. Totam, deserunt. Asperiores soluta maxime eveniet, labore dolore sapiente cupiditate? Omnis iusto inventore molestiae ullam voluptatum?
+          Delectus et sint magnam totam a? Blanditiis quam explicabo culpa provident fuga, odit alias inventore necessitatibus quis, dolores, magnam vel obcaecati dolorem. Iste beatae sit quasi aperiam molestias laboriosam maxime.
+        </p>
+      </div>
+    </div>
+    <div class="wrapper nav">
+        <ul class="navigation">
+            <li><a href="default.asp">Link1</a></li>
+            <li><a href="news.asp">link2</a></li>
+            <li><a href="contact.asp">Link3</a></li>
+          </ul>
+    </div>
+    <div class="main wrapper">
+      <div class="article">
+        <div class="article-header">
+          <h3>Lorem ipsum dolor sit amet.</h3>
+        </div>
+        <div class="article-content">
+          <div class="article-img left">
+            <img src="/assets/img/PG.jpeg" alt="">
+          </div>
+          <div class="article-txt right">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veniam est vero numquam, molestiae rerum. Ea deserunt quam porro aliquid molestias cumque voluptatem eos ducimus officia illo sunt, esse earum!
+          </div>
+        </div>
+      </div>
+      <div class="article">
+        <div class="article-header"></div>
+        <div class="article-content">
+          <div class="article-img left">
+
+          </div>
+          <div class="article-txt right">
+
+          </div>
+        </div>
+      </div>
+      <div class="article">
+        <div class="article-header"></div>
+        <div class="article-content">
+          <div class="article-img left">
+
+          </div>
+          <div class="article-txt right">
+
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
