--- a/index.html
+++ b/index.html
@@ -79,6 +79,27 @@
           </div>
         </div>
       </div>
+
+      <!-- Formularz -->
+      <div>
+        <form action="">
+          <div>
+            <label for=""></label><input type="text">
+          </div>
+          <div>
+            <label for=""></label><input type="text">
+          </div>
+          <div>
+            <label for=""></label><input type="text">
+          </div>
+          <div>
+            <label for=""></label><input type="text">
+          </div>
+          <div>
+            <label for=""></label><input type="text">
+          </div>
+        </form>
+      </div>
     </div>
 
   </body>
