--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
             <div>
               <label for=""></label>
-              <textarea rows="4" cols="50">
+              <textarea rows="4" cols="50" id="comment-text-area">
                 Komentarz...
               </textarea>
             </div>
