--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
             </div>
             <div class="">
               <button type="submit">Wyślij</button>
-              <button type="reset">Wyczyść</button>
+              <button type="reset" id="resetButton">Wyczyść</button>
             </div>
           </form>
         </div>
       </div>
 
-        <div id="comments" class="container container-inline">
+        <div id="comments" class="container ">
             <div class="comment">
               <div class="poster">
                 <div class="nick">
