--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="ramka ramka-czerwona" style="width: 75%; height: 3empx;">
-      <p id="pId" class="co by tu wstawić......">
-        Wyśrodkuj mnie i pokoloruj :(
+      <p id="pId" class="text-wysrodkowany text-czerwony">
+        Wyśrodkuj mnie i pokoloruj na czerwono! :(
       </p>
     </div>
   </body>
