--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="inner">Inner</div>
       </div>
       <div class="sized static"> 
-        ABSOLUTE 
+        STATIC-2 
         <div class="inner">Static-2</div>
       </div>
       <div class="sized sticky"> 
@@ -30,7 +30,7 @@
         <div class="inner">Inner</div>
       </div>
       <div class="sized fixed"> 
-        STATIC
+        FIXED
         <div class="inner">Inner</div> 
       </div>
     </div>
