--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="pl">
-  <head>
-    <meta charset="utf-8">
-    <title>title</title>
-	<link rel="icon" href="favico.ico">
-    <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
-  </head>
-  <body>
-    Super duper
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="font">
+        <span class="F"></span>
+        <span class="O"></span>
+        <span class="N"></span>
+        <span class="T"></span>
+    </div>
+</body>
 </html>
+
