--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
   </head>
   <body>
     <div class="">
-      <p>To jest paragraf</p>
-      <p>To też</p>
-      <p>I to też</p>
-      <button>A to guzik</button>
+      <div>
+        <p>To jest paragraf</p>
+        <p>To też</p>
+        <p>I to też</p>
+      </div>
+      <button id="guzik">A to guzik</button>
     </div>
   </body>
 </html>
