--- a/index.html
+++ b/index.html
@@ -3,11 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title>title</title>
-	<link rel="icon" href="favico.ico">
+	  <link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
-    <script src="logger.js"></script>
+    <script src="logger.js" defer></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
   </head>
   <body>
-    Super duper
+
+    <div class="jumbotron">
+        <h1 class="display-4">Hej,</h1>
+        <p class="lead">To Twój najważniejszy przykład JS w życiu</p>
+      </div>
+
+
+    <div class="container" id="main">
+      <div class="row">
+        <div class="col-sm">
+          <button id="id1" class="btn btn-primary">Guzik <span class="badge badge-primary">1</span></button>
+        </div>
+        <div class="col-sm">
+          <button id="id2" class="btn btn-primary">Guzik <span class="badge badge-secondary">2</span></button>
+          <button id="id3" class="btn btn-primary">Guzik <span class="badge badge-danger">3</span></button>
+          <button id="id4" class="btn btn-primary">Guzik <span class="badge badge-info">4</span></button>
+        </div>
+        <div class="col-sm">
+          <button id="id5" class="btn btn-primary">Guzik <span class="badge badge-dark">5</span></button>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="footer">
+    </div>
+
   </body>
 </html>
