added semnatic tags

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>title</title>
-	<link rel="icon" href="favico.ico">
+  <link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
     <script src="logger.js"></script>
   </head>
   <body>
-    Super, działam
+    <article> Czy w przeglądarce widać, że to tag semantyczny?</article>
+      <aside> Czy w przeglądarce widać, że to tag semantyczny?</aside>
+      <details> Czy w przeglądarce widać, że to tag semantyczny?</details>
+      <figcaption> Czy w przeglądarce widać, że to tag semantyczny?</figcaption>
+      <figure> Czy w przeglądarce widać, że to tag semantyczny?</figure>
+      <footer> Czy w przeglądarce widać, że to tag semantyczny?</footer>
+      <header> Czy w przeglądarce widać, że to tag semantyczny?</header>
+      <main> Czy w przeglądarce widać, że to tag semantyczny?</main>
+      <mark> Czy w przeglądarce widać, że to tag semantyczny?</mark>
+      <nav> Czy w przeglądarce widać, że to tag semantyczny?</nav>
+      <section> Czy w przeglądarce widać, że to tag semantyczny?</section>
+      <summary> Czy w przeglądarce widać, że to tag semantyczny?</summary>
+      <time></time>
   </body>
 </html>
