--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="ramka ramka-czerwona" style="width: 75%; height: 3empx;">
-      <p id="pId" class="text-wysrodkowany">
+      <p id="pId" class="text-zielony">
         Wyśrodkuj mnie i pokoloruj na czerwono! :(
       </p>
     </div>
