--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="logger.js" defer></script>
   </head>
   <body>
-    <div class="ramka ramka-czerwona" style="width: 75%; height: 3empx;">
+    <div id="div" class="ramka ramka-czerwona" style="width: 75%; height: 3empx;">
       <p id="pId" class="text-zielony">
         Wyśrodkuj mnie i pokoloruj na czerwono! :(
       </p>
