--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>title</title>
 	<link rel="icon" href="favico.ico">
     <link rel="stylesheet" href="style.css">
     <script src="logger.js"></script>
   </head>
   <body>
-    Super, działam
+    <div class="madia-depeendant">
+
+    </div>
+    <div class="madia-non-depeendant">
+
+    </div>
   </body>
 </html>
